# declafka

./: CODEOWNERS  Cargo.toml  KafkaTestContainer.dockerfile  LICENSE  Makefile  README.md  example-app-kafka.yaml  kafka.yaml
.github/: dependabot.yml
.github/workflows/: rust.yml
declafka_lib/: Cargo.toml
declafka_lib/src/: kafka_config.rs  lib.rs  mock_consumer.rs  rdkafka_consumer.rs
declafka_macro/: Cargo.toml
declafka_macro/src/: lib.rs
declafka_test_macro/: Cargo.toml
declafka_test_macro/src/: lib.rs
example_app/: Cargo.toml  example-app-kafka.yaml
example_app/src/: main.rs
example_app/src/listeners/: listeners.rs
example_app/src/models/: models.rs
example_app/src/utils/: utils.rs
example_app/tests/: tests.rs
integration-tests/: Cargo.toml
integration-tests/tests/: global_kafka.rs  integration_test.rs  logging_setup.rs
integration_tests/: Cargo.toml  test-kafka-basic.yaml  test-kafka-dlq.yaml  test-kafka-non-dlq-retry.yaml  test-kafka.yaml
integration_tests/tests/: global_kafka.rs  integration_test.rs  kafka_testcontainer_provider.rs
my_kafka_app/: Cargo.toml
my_kafka_app/src/: lib.rs  main.rs
my_kafka_app/src/listeners/: listeners.rs
my_kafka_app/src/models/: models.rs
my_kafka_app/src/routes/: routes.rs
my_kafka_app/src/utils/: deserializers.rs
my_kafka_lib/: Cargo.toml
my_kafka_lib/src/: lib.rs
my_kafka_macros/: Cargo.toml
my_kafka_macros/src/: lib.rs
src/: lib.rs  main.rs
src/handler/: handler.rs
src/kafka/: kafka.rs
src/listeners/: listeners.rs
src/models/: models.rs
src/routes/: routes.rs
src/utils/: deserializers.rs  mod.rs  utils.rs
tests/: tests.rs
