[package]
name = "customersvc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-service = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
env_logger = "0.11.6"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
log = "0.4.25"

[[bin]]
name = "customersvc"
path = "src/main.rs"
