[package]
name = "declafka_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
rdkafka = "0.37.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal", "sync"] }
serde_json = "1.0"
chrono = "0.4"
serde_yaml = "0.9.34"
async-trait = "0.1.85"

[dev-dependencies]
tempfile = "3.6.0"
ctor = "0.3.6"
env_logger = "0.11.6"

[lib]
name = "declafka_lib"
