[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
declafka_lib = { path = "../declafka_lib" }
declafka_macro = { path = "../declafka_macro" }
testcontainers = { version = "0.23.2", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
env_logger = "0.11.6"
lazy_static = "1.4"
log = "0.4.25"
