[package]
name = "my_kafka_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-service = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
env_logger = "0.11.6"
serde_json = "1.0.138"
# Bring in the library and macros from our workspace
my_kafka_lib = { path = "../my_kafka_lib" }
my_kafka_macros = { path = "../my_kafka_macros" }
log = "0.4.25"

