[package]
name = "my_kafka_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lib]
name = "my_kafka_lib"
# normal library crate (no proc-macro)